# translate-kit

./: .gitignore  .gitmodules  LICENSE  NOTICE  Package.swift  README.md
.github/workflows/: release.yml
android/: build.gradle  gradle.properties  settings.gradle  version.properties
android/translate-kit/: CMakeLists.txt  build.gradle
android/translate-kit/src/androidTest/java/com/duckduckgo/translatekit/: TranslateKitInstrumentedTest.kt
android/translate-kit/src/androidTest/java/io/github/marcosholgado/translatekit/: TranslateKitInstrumentedTest.kt
android/translate-kit/src/main/cpp/: translate.cpp
android/translate-kit/src/main/java/com/duckduckgo/translatekit/: ModelSpec.kt  Results.kt  TranslateKit.kt  TranslationModel.kt
android/translate-kit/src/main/java/io/github/marcosholgado/translatekit/: ModelSpec.kt  Results.kt  TranslateKit.kt  TranslationModel.kt
android/translate-kit/src/test/java/com/duckduckgo/translatekit/: TranslateKitGracefulDegradationTest.kt
core/: CMakeLists.txt
core/cmake/: BergamotEngine.cmake
core/include/translate_kit/: translate_kit.h
core/src/: c_api.cpp  language_detector.cpp  language_detector.h  translator.cpp  translator.h
core/test/: CMakeLists.txt  c_api_test.cpp
models/: README.md
scripts/: apply-engine-patches.sh
